[project]
name = "tensi"
dynamic = ["version"]
description = "Tensor visualization library"
authors = [{name = "Dorsa Rohani", email = "dorsa.rohani@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "typing-extensions"
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.5", "seaborn"]
plotly = ["plotly>=5.0", "kaleido"]
jupyter = ["ipywidgets", "IPython"]
torch = ["torch"]
tensorflow = ["tensorflow"]
jax = ["jax", "jaxlib"]
all = ["tensi[matplotlib,plotly,jupyter,torch,tensorflow,jax]"]

[project.urls]
Homepage = "https://github.com/DorsaRoh/tensi"
Repository = "https://github.com/DorsaRoh/tensi"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "tensi.__version__"}
